contrib/python/oracledb/oracledb/impl/thick/odpi.pxd

#------------------------------------------------------------------------------
# Copyright (c) 2020, 2024, Oracle and/or its affiliates.
#
# This software is dual-licensed to you under the Universal Permissive License
# (UPL) 1.0 as shown at https://oss.oracle.com/licenses/upl and Apache License
# 2.0 as shown at http://www.apache.org/licenses/LICENSE-2.0. You may choose
# either license.
#
# If you elect to accept the software under the Apache License, Version 2.0,
# the following applies:
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#------------------------------------------------------------------------------

#------------------------------------------------------------------------------
# odpi.pxd
#
# Cython definition file for the constants, functions and structures found in
# ODPI-C used by the thick implementation classes (embedded in thick_impl.pyx).
#------------------------------------------------------------------------------

from libc.stdint cimport int8_t, int16_t, int32_t, int64_t
from libc.stdint cimport uint8_t, uint16_t, uint32_t, uint64_t

cdef enum:
    PYO_OCI_ATTR_TYPE_STRING = 1
    PYO_OCI_ATTR_TYPE_BOOLEAN = 2
    PYO_OCI_ATTR_TYPE_UINT8 = 8
    PYO_OCI_ATTR_TYPE_UINT16 = 16
    PYO_OCI_ATTR_TYPE_UINT32 = 32
    PYO_OCI_ATTR_TYPE_UINT64 = 64

cdef extern from "impl/thick/odpi/embed/dpi.c":

    # version constants
    unsigned int DPI_MAJOR_VERSION
    unsigned int DPI_MINOR_VERSION

    # success/failure constants
    int DPI_SUCCESS
    int DPI_FAILURE

    # defaults
    enum:
        DPI_DEFAULT_PREFETCH_ROWS

    # execution modes
    enum:
        DPI_MODE_EXEC_ARRAY_DML_ROWCOUNTS
        DPI_MODE_EXEC_BATCH_ERRORS
        DPI_MODE_EXEC_COMMIT_ON_SUCCESS
        DPI_MODE_EXEC_DEFAULT
        DPI_MODE_EXEC_DESCRIBE_ONLY
        DPI_MODE_EXEC_PARSE_ONLY

    # connection/pool creation modes
    enum:
        DPI_MODE_CREATE_DEFAULT
        DPI_MODE_CREATE_THREADED
        DPI_MODE_CREATE_EVENTS

    # connection close modes
    enum:
        DPI_MODE_CONN_CLOSE_DEFAULT
        DPI_MODE_CONN_CLOSE_DROP
        DPI_MODE_CONN_CLOSE_RETAG

    # pool close modes
    enum:
        DPI_MODE_POOL_CLOSE_DEFAULT
        DPI_MODE_POOL_CLOSE_FORCE

    # native types
    enum:
        DPI_NATIVE_TYPE_BOOLEAN
        DPI_NATIVE_TYPE_BYTES
        DPI_NATIVE_TYPE_DOUBLE
        DPI_NATIVE_TYPE_FLOAT
        DPI_NATIVE_TYPE_INT64
        DPI_NATIVE_TYPE_INTERVAL_DS
        DPI_NATIVE_TYPE_JSON
        DPI_NATIVE_TYPE_JSON_ARRAY
        DPI_NATIVE_TYPE_JSON_OBJECT
        DPI_NATIVE_TYPE_LOB
        DPI_NATIVE_TYPE_NULL
        DPI_NATIVE_TYPE_OBJECT
        DPI_NATIVE_TYPE_ROWID
        DPI_NATIVE_TYPE_STMT
        DPI_NATIVE_TYPE_TIMESTAMP
        DPI_NATIVE_TYPE_VECTOR

    # Oracle types
    enum:
        DPI_ORACLE_TYPE_BFILE
        DPI_ORACLE_TYPE_BLOB
        DPI_ORACLE_TYPE_BOOLEAN
        DPI_ORACLE_TYPE_CHAR
        DPI_ORACLE_TYPE_CLOB
        DPI_ORACLE_TYPE_DATE
        DPI_ORACLE_TYPE_INTERVAL_DS
        DPI_ORACLE_TYPE_INTERVAL_YM
        DPI_ORACLE_TYPE_JSON
        DPI_ORACLE_TYPE_JSON_ARRAY
        DPI_ORACLE_TYPE_JSON_ID
        DPI_ORACLE_TYPE_JSON_OBJECT
        DPI_ORACLE_TYPE_LONG_NVARCHAR
        DPI_ORACLE_TYPE_LONG_RAW
        DPI_ORACLE_TYPE_LONG_VARCHAR
        DPI_ORACLE_TYPE_NATIVE_DOUBLE
        DPI_ORACLE_TYPE_NATIVE_FLOAT
        DPI_ORACLE_TYPE_NATIVE_INT
        DPI_ORACLE_TYPE_NCHAR
        DPI_ORACLE_TYPE_NCLOB
        DPI_ORACLE_TYPE_NONE
        DPI_ORACLE_TYPE_NUMBER
        DPI_ORACLE_TYPE_NVARCHAR
        DPI_ORACLE_TYPE_OBJECT
        DPI_ORACLE_TYPE_RAW
        DPI_ORACLE_TYPE_ROWID
        DPI_ORACLE_TYPE_STMT
        DPI_ORACLE_TYPE_TIMESTAMP
        DPI_ORACLE_TYPE_TIMESTAMP_LTZ
        DPI_ORACLE_TYPE_TIMESTAMP_TZ
        DPI_ORACLE_TYPE_VARCHAR
        DPI_ORACLE_TYPE_VECTOR
        DPI_ORACLE_TYPE_XMLTYPE

    # SODA flags
    enum:
        DPI_SODA_FLAGS_DEFAULT
        DPI_SODA_FLAGS_ATOMIC_COMMIT
        DPI_SODA_FLAGS_CREATE_COLL_MAP
        DPI_SODA_FLAGS_INDEX_DROP_FORCE

    # database startup modes
    enum:
        DPI_MODE_STARTUP_DEFAULT
        DPI_MODE_STARTUP_FORCE
        DPI_MODE_STARTUP_RESTRICT

    # fetch modes (for scrolling cursors)
    enum:
        DPI_MODE_FETCH_FIRST
        DPI_MODE_FETCH_LAST
        DPI_MODE_FETCH_ABSOLUTE
        DPI_MODE_FETCH_RELATIVE

    # vector formats
    enum:
        DPI_VECTOR_FORMAT_BINARY
        DPI_VECTOR_FORMAT_FLOAT32
        DPI_VECTOR_FORMAT_FLOAT64
        DPI_VECTOR_FORMAT_INT8

    # subscription constants
    uint32_t DPI_SUBSCR_QOS_QUERY
    uint32_t DPI_EVENT_OBJCHANGE
    uint32_t DPI_EVENT_QUERYCHANGE

    # JSON flags
    uint32_t DPI_JSON_OPT_NUMBER_AS_STRING

    # opaque handles
    ctypedef struct dpiConn:
        pass

    ctypedef struct dpiContext:
        pass

    ctypedef struct dpiDeqOptions:
        pass

    ctypedef struct dpiEnqOptions:
        pass

    ctypedef struct dpiJson:
        pass

    ctypedef struct dpiLob:
        pass

    ctypedef struct dpiMsgProps:
        pass

    ctypedef struct dpiObject:
        pass

    ctypedef struct dpiObjectAttr:
        pass

    ctypedef struct dpiObjectType:
        pass

    ctypedef struct dpiPool:
        pass

    ctypedef struct dpiQueue:
        pass

    ctypedef struct dpiRowid:
        pass

    ctypedef struct dpiSodaColl:
        pass

    ctypedef struct dpiSodaDb:
        pass

    ctypedef struct dpiSodaDoc:
        pass

    ctypedef struct dpiSodaDocCursor:
        pass

    ctypedef struct dpiStmt:
        pass

    ctypedef struct dpiSubscr:
        pass

    ctypedef struct dpiVar:
        pass

    ctypedef struct dpiVector:
        pass

    # function pointer types
    ctypedef void (*dpiSubscrCallback)(void* context,
            dpiSubscrMessage *message) except * nogil

    ctypedef int (*dpiAccessTokenCallback)(void *context,
            dpiAccessToken *accessToken) except * nogil

    # complex native data types
    ctypedef struct dpiBytes:
        char *ptr
        uint32_t length
        const char *encoding

    ctypedef struct dpiIntervalDS:
        int32_t days
        int32_t hours
        int32_t minutes
        int32_t seconds
        int32_t fseconds

    ctypedef struct dpiIntervalYM:
        int32_t years
        int32_t months

    ctypedef struct dpiJsonNode:
        uint32_t oracleTypeNum
        uint32_t nativeTypeNum
        dpiDataBuffer *value

    ctypedef struct dpiJsonArray:
        uint32_t numElements
        dpiJsonNode *elements
        dpiDataBuffer *elementValues

    ctypedef struct dpiJsonObject:
        uint32_t numFields
        char **fieldNames
        uint32_t *fieldNameLengths
        dpiJsonNode *fields
        dpiDataBuffer *fieldValues

    ctypedef struct dpiTimestamp:
        int16_t year
        uint8_t month
        uint8_t day
        uint8_t hour
        uint8_t minute
        uint8_t second
        uint32_t fsecond
        int8_t tzHourOffset
        int8_t tzMinuteOffset

    # public structures
    ctypedef struct dpiAnnotation:
        const char *key
        uint32_t keyLength
        const char *value
        uint32_t valueLength

    ctypedef struct dpiAppContext:
        const char *namespaceName
        uint32_t namespaceNameLength
        const char *name
        uint32_t nameLength
        const char *value
        uint32_t valueLength

    ctypedef struct dpiCommonCreateParams:
        uint32_t createMode
        const char *encoding
        const char *nencoding
        const char *edition
        uint32_t editionLength
        const char *driverName
        uint32_t driverNameLength
        bint sodaMetadataCache
        uint32_t stmtCacheSize
        dpiAccessToken *accessToken

    ctypedef struct dpiConnCreateParams:
        uint32_t authMode
        const char *connectionClass
        uint32_t connectionClassLength
        uint32_t purity
        const char *newPassword
        uint32_t newPasswordLength
        dpiAppContext *appContext
        uint32_t numAppContext
        bint externalAuth
        void *externalHandle
        dpiPool *pool
        const char *tag
        uint32_t tagLength
        bint matchAnyTag
        const char *outTag
        uint32_t outTagLength
        bint outTagFound
        dpiShardingKeyColumn *shardingKeyColumns
        uint8_t numShardingKeyColumns
        dpiShardingKeyColumn *superShardingKeyColumns
        uint8_t numSuperShardingKeyColumns
        bint outNewSession

    ctypedef struct dpiConnInfo:
        const char *dbDomain
        uint32_t dbDomainLength
        const char *dbName
        uint32_t dbNameLength
        const char *instanceName
        uint32_t instanceNameLength
        const char *serviceName
        uint32_t serviceNameLength
        uint32_t maxIdentifierLength
        uint32_t maxOpenCursors
        uint8_t serverType

    ctypedef struct dpiContextCreateParams:
        const char *defaultDriverName
        const char *defaultEncoding
        const char *loadErrorUrl
        const char *oracleClientLibDir
        const char *oracleClientConfigDir
        bint sodaUseJsonDesc
        bint useJsonId

    ctypedef union dpiDataBuffer:
        bint asBoolean
        uint8_t asUint8
        uint16_t asUint16
        uint32_t asUint32
        int64_t asInt64
        uint64_t asUint64
        float asFloat
        double asDouble
        char *asString
        void *asRaw
        dpiBytes asBytes
        dpiTimestamp asTimestamp
        dpiIntervalDS asIntervalDS
        dpiIntervalYM asIntervalYM
        dpiJson *asJson
        dpiJsonObject asJsonObject
        dpiJsonArray asJsonArray
        dpiLob *asLOB
        dpiObject *asObject
        dpiStmt *asStmt
        dpiRowid *asRowid
        dpiVector *asVector

    ctypedef struct dpiData:
        bint isNull
        dpiDataBuffer value

    ctypedef struct dpiDataTypeInfo:
        uint32_t oracleTypeNum
        uint32_t defaultNativeTypeNum
        uint16_t ociTypeCode
        uint32_t dbSizeInBytes
        uint32_t clientSizeInBytes
        uint32_t sizeInChars
        int16_t precision
        int8_t scale
        uint8_t fsPrecision
        dpiObjectType *objectType
        bint isJson
        const char *domainSchema
        uint32_t domainSchemaLength
        const char *domainName
        uint32_t domainNameLength
        uint32_t numAnnotations
        dpiAnnotation *annotations
        bint isOson
        uint32_t vectorDimensions
        uint8_t vectorFormat
        uint8_t vectorFlags

    ctypedef struct dpiAccessToken:
        const char *token
        uint32_t tokenLength
        const char *privateKey
        uint32_t privateKeyLength

    ctypedef struct dpiErrorInfo:
        int32_t code
        uint16_t offset16
        const char *message
        uint32_t messageLength
        const char *encoding
        const char *fnName
        const char *action
        const char *sqlState
        bint isRecoverable
        bint isWarning
        uint32_t offset

    ctypedef struct dpiObjectAttrInfo:
        const char *name
        uint32_t nameLength
        dpiDataTypeInfo typeInfo

    ctypedef struct dpiObjectTypeInfo:
        const char *schema
        uint32_t schemaLength
        const char *name
        uint32_t nameLength
        bint isCollection
        dpiDataTypeInfo elementTypeInfo
        uint16_t numAttributes
        const char *packageName
        uint32_t packageNameLength
